# src/API/Rotas/RotasParcela.ts
@@ -6,16 +6,29 @@ const RotasParcela = Router();
 const controladorParcela = new ControladorParcela();
 
 RotasParcela.get("/parcelas", 
-  // #swagger.tags = ['Parcelas']
-  // #swagger.summary = 'Obtém todas as parcelas'
-  // #swagger.description = 'Obtém todas as parcelas cadastradas na aplicação'
+  /*
+    #swagger.tags = ['Parcelas']
+    #swagger.summary = 'Obtém todas as parcelas'
+    #swagger.description = 'Obtém todas as parcelas cadastradas na aplicação'
+    #swagger.responses[204] = {
+      'description': 'No Content',
+    }
+  */
 
   controladorParcela.ObterTodasParcelas);
 
 RotasParcela.get("/parcelas/:idParcela",
-  // #swagger.tags = ['Parcelas']
-  // #swagger.summary = 'Obtém parcela por Id'
-  // #swagger.description = 'Realiza a busca da parcela e retorna seus dados'
+  /*
+    #swagger.tags = ['Parcelas']
+    #swagger.summary = 'Obtém parcela por Id'
+    #swagger.description = 'Realiza a busca da parcela e retorna seus dados'
+    #swagger.responses[400] = {
+      description: 'Bad Request',
+      schema: {
+        $ref: '#/definitions/RespostaBadRequest'
+      }
+    }
+  */
 
   celebrate(
     {
@@ -29,9 +42,17 @@ RotasParcela.get("/parcelas/:idParcela",
 );
 
 RotasParcela.get("/parcelas/emprestimo/:idEmprestimo",
-  // #swagger.tags = ['Parcelas']
-  // #swagger.summary = 'Obtém todas as parcelas de um empréstimo'
-  // #swagger.description = 'Realiza a busca de todas as parcelas relacionadas ao empréstimo'
+  /*
+    #swagger.tags = ['Parcelas']
+    #swagger.summary = 'Obtém todas as parcelas de um empréstimo'
+    #swagger.description = 'Realiza a busca de todas as parcelas relacionadas ao empréstimo'
+    #swagger.responses[400] = {
+      description: 'Bad Request',
+      schema: {
+        $ref: '#/definitions/RespostaBadRequest'
+      }
+    }
+  */
 
   celebrate(
     {
@@ -45,9 +66,17 @@ RotasParcela.get("/parcelas/emprestimo/:idEmprestimo",
 );
 
 RotasParcela.patch("/parcelas/:idParcela/pagamento",
-  // #swagger.tags = ['Parcelas']
-  // #swagger.summary = 'Registra o pagamento de uma parcela'
-  // #swagger.description = 'Adiciona a data do pagamento nos dados da parcela'
+  /*
+    #swagger.tags = ['Parcelas']
+    #swagger.summary = 'Registra o pagamento de uma parcela'
+    #swagger.description = 'Adiciona a data do pagamento nos dados da parcela'
+    #swagger.responses[400] = {
+      description: 'Bad Request',
+      schema: {
+        $ref: '#/definitions/RespostaBadRequest'
+      }
+    }
+  */
 
   celebrate(
     {
