# src/API/Rotas/RotasUsuario.ts
@@ -6,16 +6,29 @@ const RotasUsuario = Router();
 const controladorUsuario = new ControladorUsuario();
 
 RotasUsuario.get("/usuarios", 
-  // #swagger.tags = ['Usuarios']
-  // #swagger.summary = 'Obtém todos os usuários'
-  // #swagger.description = 'Retorna todos os usuários cadastrados na aplicação'
+  /*
+    #swagger.tags = ['Usuarios']
+    #swagger.summary = 'Obtém todos os usuários'
+    #swagger.description = 'Retorna todos os usuários cadastrados na aplicação'
+    #swagger.responses[204] = {
+      'description': 'No Content',
+    }
+  */
 
   controladorUsuario.ObterTodosUsuarios);
 
 RotasUsuario.get("/usuarios/:idUsuario",
-  // #swagger.tags = ['Usuarios']
-  // #swagger.summary = 'Obtém usuario por id'
-  // #swagger.description = 'Realiza a busca do usuário pelo id'
+  /* 
+    #swagger.tags = ['Usuarios']
+    #swagger.summary = 'Obtém usuario por id'
+    #swagger.description = 'Realiza a busca do usuário pelo id' 
+    #swagger.responses[400] = {
+      description: 'Bad Request',
+      schema: {
+        $ref: '#/definitions/RespostaBadRequest'
+      }
+    }
+  */
 
   celebrate(
     {
@@ -29,9 +42,27 @@ RotasUsuario.get("/usuarios/:idUsuario",
 );
 
 RotasUsuario.post("/usuarios",
-  // #swagger.tags = ['Usuarios']
-  // #swagger.summary = 'Adiciona um novo usuário'
-  // #swagger.description = 'Solicito o registro de um novo usuário na aplicação'
+  /*
+    #swagger.tags = ['Usuarios']
+    #swagger.summary = 'Adiciona um novo usuário'
+    #swagger.description = 'Solicito o registro de um novo usuário na aplicação'
+    #swagger.responses['400']
+    #swagger.parameters['body'] = {
+      'in': 'body',
+      'name': 'body',
+      'description' : 'Novo usuário',
+      'required' : 'true',
+      'schema' : {
+        '$ref' : '#/definitions/InserirUsuario'
+      }
+    }
+    #swagger.responses[400] = {
+      description: 'Bad Request',
+      schema: {
+        $ref: '#/definitions/RespostaBadRequest'
+      }
+    }
+  */
 
   celebrate(
     {
@@ -48,9 +79,26 @@ RotasUsuario.post("/usuarios",
 );
 
 RotasUsuario.post("/usuarios/login",
-  // #swagger.tags = ['Usuarios']
-  // #swagger.summary = 'Realiza o login na aplicação'
-  // #swagger.description = 'Realiza o login na aplicação se o usuário for habilitado'
+  /*
+    #swagger.tags = ['Usuarios']
+    #swagger.summary = 'Realiza o login na aplicação'
+    #swagger.description = 'Realiza o login na aplicação se o usuário for habilitado'
+    #swagger.parameters['body'] = {
+      'in': 'body',
+      'name': 'body',
+      'description' : 'Login usuário',
+      'required' : 'true',
+      'schema' : {
+        '$ref' : '#/definitions/LoginUsuario'
+      }
+    }
+    #swagger.responses[400] = {
+      description: 'Bad Request',
+      schema: {
+        $ref: '#/definitions/RespostaBadRequest'
+      }
+    }
+  */
 
   celebrate(
     {
@@ -65,9 +113,26 @@ RotasUsuario.post("/usuarios/login",
 );
 
 RotasUsuario.patch("/usuarios/:idUsuario/senha",
-  // #swagger.tags = ['Usuários']
-  // #swagger.summary = 'Atualiza a senha do usuário'
-  // #swagger.description = 'Atualiza a senha do usuário cadastrado'
+  /*
+    #swagger.tags = ['Usuarios']
+    #swagger.summary = 'Atualiza a senha do usuário'
+    #swagger.description = 'Atualiza a senha do usuário cadastrado'
+    #swagger.parameters['body'] = {
+      'in': 'body',
+      'name': 'body',
+      'description' : 'Senha usuário',
+      'required' : 'true',
+      'schema' : {
+        '$ref' : '#/definitions/AtualizarSenhaUsuario'
+      }
+    }
+    #swagger.responses[400] = {
+      description: 'Bad Request',
+      schema: {
+        $ref: '#/definitions/RespostaBadRequest'
+      }
+    }
+  */
 
   celebrate(
     {
@@ -86,9 +151,17 @@ RotasUsuario.patch("/usuarios/:idUsuario/senha",
 );
 
 RotasUsuario.patch("/usuarios/:idUsuario/habilitar",
-  // #swagger.tags = ['Usuários']
-  // #swagger.summary = 'Habilita um usuário para acesso na aplicação'
-  // #swagger.description = 'Atualiza o status do usuário para habilitado'
+  /*
+    #swagger.tags = ['Usuarios']
+    #swagger.summary = 'Habilita um usuário para acesso na aplicação'
+    #swagger.description = 'Atualiza o status do usuário para habilitado'
+    #swagger.responses[400] = {
+      description: 'Bad Request',
+      schema: {
+        $ref: '#/definitions/RespostaBadRequest'
+      }
+    }
+  */
 
   celebrate(
     {
@@ -102,9 +175,17 @@ RotasUsuario.patch("/usuarios/:idUsuario/habilitar",
 );
 
 RotasUsuario.delete("/usuarios/:idUsuario",
-  // #swagger.tags = ['Usuários']
-  // #swagger.summary = 'Remove o usuário'
-  // #swagger.description = 'Remove o usuário se não tiver empréstimos cadastrados'
+  /*
+    #swagger.tags = ['Usuarios']
+    #swagger.summary = 'Remove o usuário'
+    #swagger.description = 'Remove o usuário se não tiver empréstimos cadastrados'
+    #swagger.responses[400] = {
+      description: 'Bad Request',
+      schema: {
+        $ref: '#/definitions/RespostaBadRequest'
+      }
+    }
+  */
 
   celebrate(
     {
